corrected the nav on mobile

--- a/scss/about-us.scss
+++ b/scss/about-us.scss
@@ -231,6 +231,8 @@ a, .menu, .menu li{
             text-align: center;
             padding: 0;
             padding-bottom: 2%;
+            position: relative;
+            right: 2%;
 		}
         nav ul li{
 			display:block;
@@ -293,6 +295,8 @@ a, .menu, .menu li{
             text-align: center;
             padding: 0;
             padding-bottom: 2%;
+            position: relative;
+            right: 2%;
 		}
         nav ul li{
 			display:block;
@@ -363,6 +367,8 @@ a, .menu, .menu li{
             text-align: center;
             padding: 0;
             padding-bottom: 2%;
+            position: relative;
+            right: 3%;
 		}
         nav ul li{
 			display:block;
@@ -432,6 +438,8 @@ a, .menu, .menu li{
             text-align: center;
             padding: 0;
             padding-bottom: 2%;
+            position: relative;
+            right: 2%;
 		}
         nav ul li{
 			display:block;
