--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -235,6 +235,8 @@ a, .menu, .menu li{
             text-align: center;
             padding: 0;
             padding-bottom: 2%;
+            position: relative;
+            right: 2%;
 		}
         nav ul li{
 			display:block;
@@ -305,6 +307,8 @@ a, .menu, .menu li{
             text-align: center;
             padding: 0;
             padding-bottom: 2%;
+            position: relative;
+            right: 2%;
 		}
         nav ul li{
 			display:block;
@@ -376,6 +380,8 @@ a, .menu, .menu li{
             text-align: center;
             padding: 0;
             padding-bottom: 2%;
+            position: relative;
+            right: 3%;
 		}
         nav ul li{
 			display:block;
@@ -448,6 +454,8 @@ a, .menu, .menu li{
             text-align: center;
             padding: 0;
             padding-bottom: 2%;
+            position: relative;
+            right: 2%;
 		}
         nav ul li{
 			display:block;
